--- a/MvvmExperiment/MvvmExperiment/app/src/main/AndroidManifest.xml
+++ b/MvvmExperiment/MvvmExperiment/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login_mvvm.views.LoginMvvmActivity">
+        <activity android:name=".login_mvvm.views.LoginMvvmActivity"/>
+        <activity android:name=".launcher.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
