--- a/MvvmExperiment/MvvmExperiment/domain/build.gradle
+++ b/MvvmExperiment/MvvmExperiment/domain/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'javax.inject:javax.inject:1'
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
 
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
