--- a/MvvmExperiment/MvvmExperiment/app/src/main/AndroidManifest.xml
+++ b/MvvmExperiment/MvvmExperiment/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login_mvvm.views.LoginMvvmActivity"/>
+        <activity android:name=".login_mvvm.views.LoginMvvmActivity" />
         <activity android:name=".launcher.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".rxjava.RxJavaActivity"></activity>
     </application>
 
 </manifest>
