--- a/MvvmExperiment/MvvmExperiment/app/build.gradle
+++ b/MvvmExperiment/MvvmExperiment/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     //testing
     testCompile 'junit:junit:4.12'
 }
