--- a/MvvmExperiment/MvvmExperiment/app/src/main/AndroidManifest.xml
+++ b/MvvmExperiment/MvvmExperiment/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login_mvvm.views.LoginMvvmActivity" />
+        <activity android:name=".login_mvvm.views.MvvmActivity" />
         <activity android:name=".launcher.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".rxjava.RxJavaActivity" />
-        <activity android:name=".rx_mvvm.RxMvvmActivity"></activity>
+        <activity android:name=".rx_mvvm.RxMvvmActivity"/>
     </application>
 
 </manifest>
